[package]
name = "zenhan-rs"
version = "0.2.0"
edition = "2021"
authors = ["demerara151 <pinpinroku@tutanota.com>"]
license = "MIT"
readme = "README.md"

[dependencies]
windows = { version = "0.52", features = [
  "Win32_Globalization",
  "Win32_Foundation",
  "Win32_UI",
  "Win32_UI_Input",
  "Win32_UI_Input_Ime",
  "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
